--- a/commons/js/business_solutions/bs_style.css
+++ b/commons/js/business_solutions/bs_style.css
@@ -82,7 +82,7 @@
   
   .chart_panel {
       width: 100%;
-      height: 480px;
+      height: 100%;
       display: inline-block;
       background: #fff;
       border: 1px solid #E6E9ED;
@@ -112,8 +112,6 @@
   .chart_container .chart_data {
       height: 100%;
       width: 100%;
-      max-height: 400px;
-  
   }
   
   
